...
//  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
//  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
//  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
//  SOFTWARE.

//General
"ok" = "OK";
"error" = "Error";
"cancel" = "Cancel";
"delete" = "Delete";

//Add Card
"scan_card" = "SCAN CARD";
"card_number" = "Card Number";
"cardholder_name" = "Cardholder Name";
"expiry_date" = "MM/YY";
"country" = "Country";
"postal_code" = "Postcode";
"secure_code" = "CVV";
"add_card_button" = "ADD CARD";
"invalid_expiry_date_value" = "Invalid date value entered";
"invalid_postcode" = "Invalid postcode entered";
"invalid_zip_code" = "Invalid ZIP code entered";

//Scan Card
"scan_card_message_title" = "Position card in this frame";
...
"expired" = "Expired";
"is_expired" = "is Expired";
"will_expire_soon" = "will expire soon";
"expire_soon" = "expire soon";

//CardInputField
"card_number_label" = "Card number";
"long_card_number" = "Long card number";

//SecurityCodeInputField
"please_reenter_the_card_security_code" = "Re-enter security code";
"security_code" = "Security code";

...
"issue_number_label" = "Issue number";
"issue_number_front_of_card" = "Issue number on front of card";

//DateInputField
"check_expiry_date" = "Check expiry date";
"check_start_date" = "Check start date";
"start_date_label" = "Start date";
"expiry_date_label" = "Expiry date";
"date_hint" = "MM/YY";
"date_format" = "MM/yy";

//PostcodeInputField
"billing_postcode" = "Billing postcode";
"billing_zip_code" = "Billing ZIP code";
"billing_postal_code" = "Billing postal code";

//JPBillingCountryInputField
"country_uk" = "UK";
"country_usa" = "USA";
"country_canada" = "Canada";
"country_other" = "Other";

//IDEALFormViewController
"ideal_transaction" = "iDEAL Transaction";
"selected_bank" = "Selected bank:";
"select_ideal_bank" = "Select iDEAL bank";
"enter_name" = "Enter name";
"name" = "Name";
"select_bank" = "Select %@ as your iDEAL bank";
"ideal_transaction_success" = "Transaction success!";
"ideal_transaction_pending" = "Transaction pending...";
"ideal_transaction_pending_delay" = "This is taking longer than expected. Please wait...";
"ideal_transaction_timeout" = "The transaction has timed out!";
"ideal_transaction_error" = "Oops! Something went wrong.";
"ideal_transaction_failed" = "Transaction failed!";
"retry" = "Retry";
"close" = "Close";

//JudoPayViewController
"secure_server" = "Secure server: ";
"pay" = "Pay";
"check_card" = "Check Card";
"add_card" = "Add Card";

//NSError+Additions
"unable_to_process_request_error_desc" = "Sorry, we're currently unable to process this request.";
"unable_to_process_request_error_title" = "Unable to process";
"error_request_failed" = "The request responded without data";
...
"error_card_not_supported" = "We do not accept %@";

//JPTheme
"add_card" = "Add card";
"add" = "Add";
"back" = "Back";
"payment" = "Payment";
"refund" = "Refund";
"authentication" = "Authentication";
"adding_card" = "Adding card...";
"processing_payment" = "Processing payment...";
"redirecting" = "Redirecting...";
"verifying_payment" = "Verifying payment";
...
