...
                               title:@"Register card"
                             details: @"to be stored for future transactions"],
        [DemoFeature featureWithType:DemoFeatureTypeCheckCard
                               title:@"Check card"
                             details:@"to validate a card"],
        [DemoFeature featureWithType:DemoFeatureTypeSaveCard
                               title:@"Save card"
                             details: @"to be stored for future transactions"],
        [DemoFeature featureWithType:DemoFeatureTypeApplePayPayment
                               title:@"Apple Pay payment"
                             details: @"with a wallet card"],
        [DemoFeature featureWithType:DemoFeatureTypeApplePayPreAuth
                               title:@"Apple Pay preAuth"
...
