...

@implementation IDEALBankTableViewCell

- (instancetype)initWithStyle:(UITableViewCellStyle)style
              reuseIdentifier:(NSString *)reuseIdentifier {
    if (self = [super initWithStyle:style reuseIdentifier:reuseIdentifier]) {
        self.accessibilityIdentifier = @"IDEALBankCell";
        [self setupViews];
    }
    return self;
}

- (void)configureWithBank:(IDEALBank *)bank {
...
