...
}

- (UIButton *)paymentButton {
    if (!_paymentButton) {
        _paymentButton = [UIButton buttonWithType:UIButtonTypeCustom];
        _paymentButton.translatesAutoresizingMaskIntoConstraints = NO;
        _paymentButton.accessibilityIdentifier = @"Pay Button";
        [_paymentButton setTitle:@"pay".localized forState:UIControlStateNormal];

        [_paymentButton addTarget:self
                           action:@selector(onPayButtonTap:)
                 forControlEvents:UIControlEventTouchUpInside];
    }
...
